--- a/QuickRef/QuickRef/Components/App.razor.css
+++ b/QuickRef/QuickRef/Components/App.razor.css
@@ -9,6 +9,13 @@
 
 body {
     background-color: var(--background-color);
+    padding: 0.5em;
+}
+
+.menu-button {
+    position: absolute;
+    top: 0.5em;
+    left: 0.5em;
 }
 
 /* 1. Use a more-intuitive box-sizing model */
