--- a/QuickRef/QuickRef/Components/Quickref/NoteComponent.razor.css
+++ b/QuickRef/QuickRef/Components/Quickref/NoteComponent.razor.css
@@ -1,21 +1,20 @@
 ﻿.note-component {
+    display: flex;
+    flex-direction: column;
     background: var(--secondary-color);
     padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.3rem 0.3rem #00000030;
 }
 
-.title-text {
+::deep .title-text {
     font-size: 2rem;
     font-weight: 700;
     color: var(--primary-text-color);
-    display: block;
-    border-style: solid;
-    border-width: 0 0 2px 0;
 }
 
-.body-text {
+::deep .body-text {
     color: var(--primary-text-color);
-    display: inline-block;
-    margin-top: 0.75rem;
 }
 
 .date-text {
